--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,7 @@ version = "0.0.1"
 authors = [
   { name="Gavin McWhinnie", email="gmcwhinn@ed.ac.uk" },
 ]
-license = {text = "MIT License"}
+license = {file = "LICENSE.txt"}
 description = "A pandoc filter for converting LaTeX to html for mathematics teaching"
 readme = "README.md"
 requires-python = ">=3.7"
@@ -24,4 +24,4 @@ dependencies = ["panflute >=2.1.3"]
 "Bug Tracker" = "https://github.com/GavinMcWhinnie/pandoc-math/issues"
 
 [project.scripts]
-pandoc-math = "pandoc-math:__main__"
+pandoc-math = "pandocmath:main"
