Remove workflow artifacts

--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -27,12 +27,4 @@ jobs:
         sudo dpkg -i pandoc-3.1.6.1-1-amd64.deb
 
     - name: Test with pytest
-      run: pytest tests/tests.py --doctest-modules --junitxml=junit/test-results-${{ matrix.python-version }}.xml
-
-    - name: Upload pytest test results
-      uses: actions/upload-artifact@v3
-      with:
-        name: pytest-results-${{ matrix.python-version }}
-        path: junit/test-results-${{ matrix.python-version }}.xml
-      # Use always() to always run this step to publish test results when there are test failures
-      if: ${{ always() }}
+      run: pytest tests/tests.py --doctest-modules
