--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -19,7 +19,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install pytest panflute pylatexenc
+        pip install -r requirements.txt
 
     - name: Install dependencies-pandocmath
       run: |
