--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,9 +5,12 @@ build-backend = "setuptools.build_meta"
 [tool.setuptools]
 py-modules = ["pandocmath"]
 
+[tool.setuptools.dynamic]
+version = {attr = "package.__version__"}
+
 [project]
 name = "pandoc-math"
-version = "0.0.1"
+dynamic = ["version"]
 authors = [
   { name="Gavin McWhinnie", email="gmcwhinn@ed.ac.uk" },
 ]
@@ -16,11 +19,16 @@ description = "A pandoc filter for converting LaTeX to html for mathematics teac
 readme = "README.md"
 requires-python = ">=3.7"
 classifiers = [
-    "Programming Language :: Python :: 3",
-    "License :: OSI Approved :: MIT License",
-    "Operating System :: OS Independent",
+  "Programming Language :: Python :: 3",
+  "License :: OSI Approved :: MIT License",
+  "Operating System :: OS Independent",
 ]
-dependencies = ["panflute >=2.1.3"]
+dependencies = [
+  "panflute >=2.3.0",
+  "pylatexenc >= 2.10"
+]
+
+
 
 [project.urls]
 "Homepage" = "https://github.com/GavinMcWhinnie/pandoc-math"
