--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -31,4 +31,4 @@ jobs:
         sudo dpkg -i pandoc-3.1.6.1-1-amd64.deb
 
     - name: Test with pytest
-      run: pytest tests/tests.py --doctest-modules
+      run: pytest tests --doctest-modules
