--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -33,7 +33,7 @@ jobs:
               sudo wget --quiet https://github.com/jgm/pandoc/releases/download/3.1.6.1/pandoc-3.1.6.1-1-amd64.deb
               sudo dpkg -i pandoc-3.1.6.1-1-amd64.deb
          elif [ "$RUNNER_OS" == "Windows" ]; then
-              choco install pandoc
+              choco install pandoc --no-progress
          else
               echo "$RUNNER_OS not supported"
               exit 1
