--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -4,10 +4,28 @@ theme:
   palette:
     scheme: default
     primary: teal
+  features:
+    - content.code.copy
 
 plugins:
   - search
   - mkdocstrings
 
+repo_url: https://github.com/GavinMcWhinnie/pandoc-math
+repo_name: pandoc-math
+
 watch:
   - src
+
+plugins:
+  - git-revision-date-localized:
+      enable_creation_date: true
+
+markdown_extensions:
+  - pymdownx.highlight:
+      anchor_linenums: true
+      line_spans: __span
+      pygments_lang_class: true
+  - pymdownx.inlinehilite
+  - pymdownx.snippets
+  - pymdownx.superfences
